--- a/Lab6/Lab6.html
+++ b/Lab6/Lab6.html
@@ -1,22 +1,55 @@
 <html>
 <head>
+        <meta charset="utf-8"/>
+        
+        <Access-Control-Allow-Origin:'http://cors.io/?u=https://github.com/swagthet/IT2320-BryanAmbrosio-Spring2018/blob/master/Lab6/members.json'/>
 <title>First Form</title>
 </head>
+<script src= "http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <body>
 <h1>Membership Levels</h1>
 <span id=”membershipLevels”></span>
 <h1>Current Members</h1>
+<button type="button" onclick="loadDoc()">Get my CD collection</button>
+<br><br>
 <span id=”members”></span>
 <script>
-    var MemJson = new XMLHttpRequest();
-    MemJson.onreadystatechange = function ()
-        {
-        if (this.readyState == 4 && this.status == 200) 
-            {
-            document.getElementById("membership").innerHTML = this.responseText;
-            }
-        }
-    MemJson.open('GET', 'https://github.com/swagthet/IT2320-BryanAmbrosio-Spring2018/blob/master/Lab6/members.json', true);
-    MemJson.send();
-</script>
-</html>
+    $(document).ready(function(){
+        $.getJSON('http://cors.io/?u=https://github.com/swagthet/IT2320-BryanAmbrosio-Spring2018/blob/master/Lab6/members.json', function(data){
+            var members_data = '';
+            $.each(data, function(key,value){
+                members_data += '<tr>';
+                        members_data += '<td>'+value.name+'</td>';
+                        members_data += '<td>'+value.address+'</td>';
+                        members_data += '<td>'+value.city+'</td>';
+                        members_data += '<td>'+value.zip+'</td>';
+                members_data += '</tr>';
+            });
+            $('#members').append(members_data);
+        });
+    });
+
+    function loadDoc() {
+  var xhttp = new XMLHttpRequest();
+  xhttp.onreadystatechange = function() {
+    if (this.readyState == 4 && this.status == 200) {
+      myFunction(this);
+    }
+  };
+  xhttp.open("GET", "http://cors.io/?u=https://github.com/swagthet/IT2320-BryanAmbrosio-Spring2018/blob/master/Lab6/memberships.xml", true);
+  xhttp.send();
+}
+function myFunction(xml) {
+  var i;
+  var xmlDoc = xml.responseXML;
+  var table="<tr><th>Type</th><th>Cost</th></tr>";
+  var x = xmlDoc.getElementsByTagName("memberships");
+  for (i = 0; i <x.length; i++) { 
+    table += "<tr><td>" +
+    x[i].getElementsByTagName("type")[0].childNodes[0].nodeValue +
+    "</td><td>" +
+    x[i].getElementsByTagName("cost")[0].childNodes[0].nodeValue +
+    "</td></tr>";
+  }
+  document.getElementById("membershipLevels").innerHTML = table;
+}
